--- a/about.html
+++ b/about.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>~ Dark Knight SanAndreas MODS~</title>
+    <title>About Us</title>
     <link rel="stylesheet" href="homestyle.css">
     <link rel="stylesheet" href="homesidebar.css">
     <link rel="icon" href="YouTube_background2-removebg-preview.png">
 </head>
 <body>
+    <h1>About Us</h1>
 
     <div class="side-bar">
         <a class="active" href="index.html"><button class="side">Home</button></a>
@@ -15,14 +16,13 @@
         <a href="signin_page.html"><button class="signin">Sign In</button></a>
     </div>
 
-    <h1>Welcome to Dark Knight San Andreas mods</h1>
     <div class="article">
-        <p>In this website you can get mod to modify your GTASA game for android </p>
-        <p>if you want to keep getting updates on mods sign in to the page</p>
-        <p>Download the mod , upgrade your GTA San Andreas and happy gaming</p>
+        <p>Creator: Dark Knight ModMaker</p>
+        <p>Publisher: Github.io</p>
+        <p>Inspiration: Danizzy WebDev</p>
+        <p>Published: 09th March 2024</p>
+        <p>Location: colombus, Ohio. USA</p>
+        <p>Sponsors: Danizzy WebDev, ModdingMaster.</p>
     </div>
-    <a href="gtasamods.html"><button class="getmods">Get Mods</button></a>
-
-    
-</body>
+    </body>
 </html>
